--- a/style.css
+++ b/style.css
@@ -5,12 +5,54 @@ html, body {
   margin: 0px;
 }
 
-main {
-  background-color: lightgrey;
-  width: 90%;
-  height: 90%;
+body {
+  background-color: #373F51;
 }
 
+main {
+  background-color: white;
+  width: 85%;
+  height: 85%;
+  opacity: 0.92;
+  font-family: 'M PLUS 1p', sans-serif;
+
+  color: #373F51;
+}
+
+h1 {
+  font-size:72px;
+  font-family: 'Overpass', sans-serif;
+  margin-bottom: 0px;
+}
+
+h2 {
+  margin-top: 0px;
+  font-family: 'Overpass', sans-serif;
+}
+
+button {
+  font-family: 'M PLUS 1p', sans-serif;
+  font-size: 24px;
+  padding: 30px;
+  display: table;
+  margin-left: 100px;
+  margin-top: 30px;
+}
+
+.start-screen button {
+  margin-top: 100px;
+  margin-left: 0px;
+  padding: 40px;
+  font-size: 42px;
+  font-family: 'Overpass', sans-serif;
+  display: inline-block;
+}
+
+button {
+  background-color: white;
+  border: solid lightgrey 1px;
+  border-radius: 5px;
+}
 .centered-wrapper {
     position: relative;
     text-align: center;
